[package]
name = "code_review_ssr"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"


sqlx = { version = "0.7", features = ["runtime-tokio-rustls","mysql","chrono","json"] }
dotenv = "0.15"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.11", features = ["json","multipart","rustls-tls"] }
zip = "0.6"
regex = "1"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
# Use compatible versions - askama_warp 0.12 uses askama 0.11
askama_warp = "0.12"
askama = "0.11"